lbdb (0.22) unstable; urgency=low

  * Add new module m_addr_email to request data from addressbook program
    (http://red.roses.de/~clemens/addressbook/) by Torsten Jerzembeck
    <toje@nightingale.ms.sub.org>.
  * Some optimizations on m_addr_email to handle city name correct and to
    junk entries without email address.

 -- Roland Rosenfeld <roland@debian.org>  Mon,  9 Oct 2000 15:24:46 +0200

lbdb (0.21.1) unstable; urgency=low

  * Update lbdb.el to version 1.4 to avoid problems with status line of
    lbdbq.
  * Correct behavior of variable SORT_OUTPUT (did the inverse of what it
    should do).
  * Correct output of number of matching entries (count after munging
    instead before).
  * SORT_OUTPUT now can be "name" or "address" to sort output by mail
     real names or addresses (still the default).

 -- Roland Rosenfeld <roland@debian.org>  Mon,  9 Oct 2000 12:05:28 +0200

lbdb (0.21) unstable; urgency=low

  * Don't fail in m_palm, if no database is available.
  * Update lbdb.el to version 1.3 (thanks Dave).
  * m_muttalias: Add support for "alias foo <foo@bar> (Foo Bar)" style
    aliases.
  * Correct typo in m_muttalias, which stopped to work when your HOME is
    your MUTT_DIRECTORY (Closes: #71975).
  * Correct README (we have more than two modules now :-)
  * Create sysconfdir, if it doesn't already exist.
  * lbdbq: write information about number of matching entries into status
    line and exit with return value 1, if no matching entries were found.
  * Correct exit value of lbdbq (trap command).

 -- Roland Rosenfeld <roland@debian.org>  Sun,  8 Oct 2000 01:12:33 +0200

lbdb (0.20.1) unstable; urgency=low

  * Fix name conflicts (m_palm_lsaddr now completely renamed to
    palm_lsaddr).

 -- Roland Rosenfeld <roland@debian.org>  Thu, 24 Aug 2000 04:14:05 +0200

lbdb (0.20) unstable; urgency=low

  * Add emacs interface lbdb.el 1.2 by Dave Pearson <davep@davep.org> and
    install it on Debian systems.